# 9c-configure

./: .gitignore
configure/: .gitignore  README.md  app.py  pyproject.toml  setup.cfg
configure/rest_api/: app.py  config.py  constants.py  types.py
configure/rest_api/api/: __init__.py  status.py
configure/rest_api/api/api_v1/: __init__.py
configure/rest_api/schemas/: status.py
configure/spec/: .gitignore  README.md  rest-api.json
configure/tests/: conftest.py
configure/tests/api/: test_status.py
